--- a/style.css
+++ b/style.css
@@ -1,3 +1,121 @@
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+
+* {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    font: inherit;
+    vertical-align: baseline;
+    box-sizing: border-box;
+}
+
+ol, ul {
+    list-style: none;
+}
+
+body {
+    text-align: center;
+    color: rgba(255, 255, 255, 0.8);
+    font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
+}
+
+img {
+    width: 100%;
+    max-height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
 .hidden {
     display: none;
+}
+
+.clock {
+    font-weight: 600;
+    font-size: 9em;
+    margin-top: 190px;
+    line-height: .92;
+}
+
+.login {
+    font-size: 2.5em;
+    font-weight: 600;
+}
+
+.login_form .login_name {
+    background-color: transparent;
+    border-bottom: 1px solid #fff;
+    color: #fff;
+}
+
+.login_form .login_btn {
+    border-radius: 5px;
+    font-size: 0.8em;
+    font-weight: 500;
+    padding: 5px 10px;
+}
+
+#greeting {
+    font-size: 2.6em;
+    font-weight: 600;
+}
+
+#todo_form {
+    margin-top: 40px;
+}
+
+#todo_form .todo_txt{
+    font-size: 1.8em;
+    font-weight: 400;
+}
+
+#todo_form .input_txt {
+    background-color: transparent;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.8);
+    display: block;
+    margin: 0 auto;
+    color: #fff;
+    font-size: 1.6em;
+}
+
+#todo_list {
+    position: absolute;
+    right: 12px;
+    bottom: 48px;
+    font-size: 0.85em;
+    font-weight: 600;
+}
+
+.todo_tit {
+    position: absolute;
+    right: 15px;
+    bottom: 15px;
+    font-size: 0.85em;
+    font-weight: 600;
+}
+
+#todo_list li {
+    margin-top: 5px;
+    text-align: right;
+}
+
+#todo_list li button {
+    background-color: transparent;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    font-size: 3px;
+    color: #fff;
+    padding: 2px 5px;
+    margin-left: 10px;
+}
+
+#quote {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 15px;
+    font-size: 0.85em;
+    font-weight: 600;
 }
